css/master.css
html{
  height: 100%;
}

body{
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #00368E;
  color: white;
  font-style: italic;
  font-family: 'PT Serif', serif;
}

a{
  color: white;
}

a.title{
  text-decoration: none;
}

.title{
    text-transform: lowercase;
}

/* If the screen size is 1200px wide & 800px tall or less (for Desktop) */
@media screen and (max-width: 1200px) and (max-height: 1200px) and (min-width: 1081px) {
  header{
    font-size: 3vh;
    position: relative;
    margin-top: 6vw;
    margin-left: 10vw;
  }

  h2.title{
    text-align: right;
    font-size: 3vh;
    position: relative;
    margin-top: 20vh;
    margin-right: 10vw;
    line-height: 1.35;
  }

  .navi{
    position: absolute;
    font-size: 3.5vh;
    margin-top: 8.5vh;
    margin-left: 20vw;
  }

  img{
    display: inline-block;
    vertical-align: middle;
    margin-left: 10vw;
    border-radius: 30vh;
    width: 30vh;
  }

  p{
    display: inline-block;
    position: absolute;
    text-align: justify;
    font-size: 2vh;
    margin-top: 2.5vh;
    margin-left: 6vw;
    margin-right: 8vw;
    line-height: 1.35;
    font-style: 'PT Serif Regular 400 italic', serif;
  }

  .home{
    position: absolute;
    font-size: 3vh;
    margin-top: 17vh;
    margin-left: 16vw;
  }

  footer{
    font-size: 1.8vh;
    position: absolute;
    bottom: 10px;
    margin-left: 9.5vw;
  }

  footer > h3 > a > span{
    display: inline-flex;
    vertical-align:middle;
  }

  .material-icons.md-48{
    font-size: 4vh;
  }
}
/* If the screen size is 1200px wide or less, but more than 800px tall (for Desktop) */
@media screen and (max-width: 1200px) and (min-width: 1080px) and (min-height: 1201px) {
  header{
    font-size: 3vh;
    position: relative;
    margin-top: 6vw;
    margin-left: 10vw;
  }

  h2.title{
    text-align: right;
    font-size: 3vh;
    position: relative;
    margin-top: 20vh;
    margin-right: 10vw;
    line-height: 1.35;
  }

  .navi{
    position: absolute;
    font-size: 3.5vh;
    margin-top: 8.5vh;
    margin-left: 23vw;
  }

  img{
    display: inline-block;
    vertical-align: middle;
    margin-left: 10vw;
    border-radius: 17vw;
    width: 17vw;
  }

  p{
    display: inline-block;
    position: absolute;
    text-align: justify;
    font-size: 2vh;
    margin-top: 2.5vh;
    margin-left: 4vw;
    margin-right: 8vw;
    line-height: 1.35;
    font-style: 'PT Serif Regular 400 italic', serif;
  }

  .home{
    position: absolute;
    font-size: 3.5vh;
    margin-top: 20vh;
    margin-left: 13.5vw;
  }

  footer{
    font-size: 1.8vh;
    position: fixed;
    bottom: 10px;
    margin-left: 9.5vw;
  }

  footer > h3 > a > span{
    display: inline-flex;
    vertical-align:middle;
  }

  .material-icons.md-48{
    font-size: 25px;
  }
}

/* If the screen size is 801px wide or more */
@media screen and (min-width: 1201px) {
  header{
    font-size: 3vh;
    position: relative;
    margin-top: 6vw;
    margin-left: 30vw;
  }

  h2.title{
    text-align: right;
    font-size: 2.5vh;
    position: relative;
    margin-top: 13vh;
    margin-right: 30vw;
    line-height: 1.35;
  }

  .navi{
    position: absolute;
    font-size: 3.5vh;
    margin-top: 8.5vh;
    margin-left: 32vw;
  }

  img{
    display: inline-block;
    vertical-align: middle;
    margin-left: 28.5vw;
    border-radius: 17vw;
    width: 17vw;

  }

  p{
    display: inline-block;
    position: absolute;
    text-align: justify;
    font-size: 2vh;
    margin-top: 2.5vh;
    margin-left: 4vw;
    margin-right: 20.5vw;
    margin-bottom: 3vh;
    line-height: 1.35;
    font-style: 'PT Serif Regular 400 italic', serif;
  }

  .home{
    position: absolute;
    font-size: 3.5vh;
    margin-top: 18vh;
    margin-left: 32vw;
  }

  footer{
    font-size: 1.8vh;
    position: fixed;
    bottom: 10px;
    margin-left: 9.5vw;
  }

  footer > h3 > a > span{
    display: inline-flex;
    vertical-align:middle;
  }

  .material-icons.md-48{
    font-size: 25px;
  }
}

/* Mobile (Width 1080px or less) */
@media only screen and (max-width: 1080px) {
  header{
    font-size: 3vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  h2.title{
    text-align: center;
    font-size: 2.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
  }

  .navi{
    font-size: 3vh;
    margin-top: 8.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
  }

  img{
    display: block;
    margin: 0 auto;
    border-radius: 40vw;
    width: 40vw;
  }

  p{
    display: inline-block;
    text-align: justify;
    font-size: 18px;
    margin-left: 10vw;
    margin-right: 10vw;
    padding-bottom: 2.5vh;
    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
    line-height: 1.35;
    font-style: 'PT Serif Regular 400 italic', serif;
  }

  .home{
    font-size: 3vh;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
      }

  footer{
    display: inline-block;
    font-size: 1.8vh;
    margin-left: 9.5vw;
    bottom: 10px;
  }

  footer > h3 > a > span{
    display: inline-flex;
    vertical-align:middle;
  }

  #home{
    font-size: 2.1vh;
    position: fixed;
    bottom: 2vh;
  }

  .material-icons.md-48{
    font-size: 25px;
  }

